保存時のフォーマット機能を組み込む。